--- a/PersonalPortfolio-Website/index.html
+++ b/PersonalPortfolio-Website/index.html
@@ -15,19 +15,19 @@
     <!-- Favicon -->
         <link href="img/stumbleupon copy.png" rel="icon">
     <!-- Bundle -->
-    <link href="css/bundle.min.css" rel="stylesheet">
+    <link href="bundle.min.css" rel="stylesheet">
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
     <!-- Plugin Css -->
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
-    <link href="css/jquery.fancybox.min.css" rel="stylesheet">
-    <link href="css/owl.carousel.min.css" rel="stylesheet">
+    <link href="jquery.fancybox.min.css" rel="stylesheet">
+    <link href="owl.carousel.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 
     <!-- Style Sheet -->
-    <link href="css/tootik.min.css" rel="stylesheet">
-    <link href="css/line-awesome.min.css" rel="stylesheet">
-    <link href="css/jquery.pagepiling.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="tootik.min.css" rel="stylesheet">
+    <link href="line-awesome.min.css" rel="stylesheet">
+    <link href="jquery.pagepiling.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="90">
@@ -774,21 +774,21 @@
 <!-- End Copyright -->
 
 <!-- JavaScript -->
-<script src="js/bundle.min.js"></script>
+<script src="bundle.min.js"></script>
 <!-- Plugin Js -->
  
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 
 <script src='https://cdn.jsdelivr.net/npm/jquery.ripples@0.6.3/dist/jquery.ripples.min.js'></script>
-<script src="js/jquery.appear.js"></script>
-<script src="js/jquery.fancybox.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
+<script src="jquery.appear.js"></script>
+<script src="jquery.fancybox.min.js"></script>
+<script src="owl.carousel.min.js"></script>
 <!-- CUSTOM JS -->
-<script src="js/jquery.pagepiling.min.js"></script>
-<script src="js/timeline.js"></script>
-<script src="js/contact_us.js"></script>
-<script src="js/script.js"></script>
+<script src="jquery.pagepiling.min.js"></script>
+<script src="timeline.js"></script>
+<script src="contact_us.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
